--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -245,7 +245,7 @@
         }
       }
       creatureFilter();
-      fillBeast("Familiar");
+      fillBeast("**Bestiary Overview");
       $( "#index .list .beastSelect" ).click(function() {
         fillBeast($( this ).text());
       });
@@ -377,22 +377,22 @@
   #book .page.left::before {
     left: -5px;
     right: 0px;
-    border-radius: 0px 30px 3px 0px / 0px 10px 3px 0px;
+    border-radius: 0px 30px 5px 0px / 0px 10px 10px 0px;
   }
   #book .page.left::after {
     left: -10px;
     right: 0px;
-    border-radius: 0px 30px 3px 0px / 0px 10px 3px 0px;
+    border-radius: 0px 30px 10px 0px / 0px 10px 10px 0px;
   }
   #book .page.right::before {
     right: -5px;
     left: 0px;
-    border-radius: 30px 3px 3px 3px / 10px 3px 3px 3px;
+    border-radius: 30px 3px 3px 5px / 10px 3px 3px 10px;
   }
   #book .page.right::after {
     right: -10px;
     left: 0px;
-    border-radius: 30px 3px 3px 3px / 10px 3px 3px 3px;
+    border-radius: 30px 3px 3px 10px / 10px 3px 3px 10px;
   }
   #book .page::after {
     top: 10px;
@@ -493,11 +493,6 @@
   #index .list .beastSelect:hover { 
     color: #b10c27;
     cursor: pointer;
-    /*text-shadow: -1px 1px 1px #fffbf6,
-      3px 5px 4px rgba(0,0,0,0.2),
-      -1px 5px 4px rgba(0,0,0,0.2),
-      3px 1px 4px rgba(0,0,0,0.2),
-      -1px 1px 4px rgba(0,0,0,0.2);*/
   }
 
   #index h1 {
@@ -509,6 +504,7 @@
     width: 90%;
     margin-left: 5%;
     letter-spacing: 2px;
+    cursor: pointer;
   }
   td.beastName {
     color: #672307;
@@ -522,6 +518,15 @@
     max-height: 100%;
     overflow-y: auto;
     text-shadow: 0px 0px 5px #fffbf6, 0px 0px 3px #fffbf6;
+  }
+  #bestiary .beastDesc h1 { 
+    background-image: url('https://i.imgur.com/cRe39mL.png'), url('https://i.imgur.com/G5SRvhT.png');
+    background-position: top center, bottom center;
+    background-repeat: no-repeat;
+    background-size: 150px;
+    padding: 30px 0px;
+    margin: 0px;
+    font-size: 10px;
   }
   #bestiary .beastDesc:first-child:first-letter {
     float: left;
@@ -653,8 +658,8 @@
   <div id="book">
     <div class="left page">
       <div id="index">
-        <h1>Bestiary</h1>
-        <h2>of magic-touched beings in Salem<br/>& the Known World</h2>
+        <h1 onclick="fillBeast('**Bestiary Overview')">Bestiary</h1>
+        <h2>of magic-touched beings in Salem<br/>& Known Worlds Beyond</h2>
         <div class="filters">
 
           <select class="filterType select-css" onchange="creatureFilter()">
