--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -66,22 +66,6 @@
     }
   }
 
-  function setText(BeastName){
-    /* Name */
-    $('.beastName').text(BeastName.replace(/\*/g,""));
-
-    if(BeastList[BeastName].ScienceName){
-      $('.beastName').append('<h2>' + BeastList[BeastName].ScienceName + '</h2>')
-    }
-
-    /* Description */
-    $('.beastContainer').css({ "top" : "10%", "bottom" : "10%", "left" : "5%", "right" : "5%" });
-    if(BeastList[BeastName].Description){
-      $('.beastDesc').html(BeastList[BeastName].Description);
-    }else{ $('.beastDesc').html("")}
-    $('.bufferSpace').css({ "height" : "1px" });
-  }
-
   function fillBeast(BeastName){
 
     /* Check if page already filled */
@@ -116,7 +100,6 @@
     }else{ $('.credits').css("display","none") }
 
     
-
     /* Semitransparent Image */
     $('#bestiary .beastImg2').remove();
     if(BeastList[BeastName].ImageTwo){
@@ -180,7 +163,7 @@
     if(BeastList[BeastName].ImagePosition && BeastList[BeastName].ImagePosition.length > 6) { 
       isBufferNeeded = false 
     }
-    if (isBufferNeeded) { $('.bufferSpace').css({ "height" : "120px" }); }
+    if (isBufferNeeded) { $('.bufferSpace').css({ "height" : "130px" }); }
 
     /* Sidebar Info */
     var summaryTable = "<h2>Summary</h2><table style='margin-bottom: 10px;'>";
@@ -198,8 +181,8 @@
     if(BeastList[BeastName].Rarity){
       var summaryTable = summaryTable + "<tr><td><b>Rarity</b></td><td>" + BeastList[BeastName].Rarity + "</td></tr>"
     }
-    if(BeastList[BeastName].SubTypes && BeastList[BeastName].SubTypes.search("Domesticatable") > -1){
-      var summaryTable = summaryTable + "<tr><td><b>Other</b></td><td>" + "Domesticatable" + "</td></tr>"
+    if(BeastList[BeastName].SubTypes && BeastList[BeastName].SubTypes.search("Companion") > -1){
+      var summaryTable = summaryTable + "<tr><td><b>Other</b></td><td>" + "Companion" + "</td></tr>"
     }
     summaryTable = summaryTable + "</table>"
     if(BeastName == "**Bestiary Overview"){
@@ -403,7 +386,7 @@
     box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
 
     color: #080808;
-    font: 12px / 14px Caudex, serif;
+    font: 13px / 16px Caudex, Georgia, Times New Roman, Times, serif;
   }
   #book .page::before, #book .page::after {
     content: '';
@@ -581,6 +564,8 @@
     line-height: 40px;
     padding-right: 8px;
     padding-left: 3px;
+    padding-top: 3px;
+    font-weight: normal;
   }
   #bestiary .bufferspace {
     padding: 0px;
@@ -748,7 +733,7 @@
 
           <select class="filterMisc select-css" onchange="creatureFilter()">
             <option>Misc. Filters</option>
-            <option>Domesticatable</option>
+            <option>Companion</option>
           </select>
 
         </div>
