--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -733,6 +733,7 @@
       <ul><li>Wood pattern from <a href="https://www.pixeden.com/graphic-web-backgrounds/wood-pattern-background">Pixeden</a></li>
       <li>Semitransparent patterns from <a href="https://www.transparenttextures.com/">Transparent Textures</a></li>
       <li>Silhouette images from <a href="https://www.silhouette.pics/index.php">Silhouette.pics</a></li>
+      <li>Title font by <a href="https://www.fontspace.com/nancy-lorenz/hobbiton-brushhand">Nancy Lorenz</a></li>
       <li>Large images on each page are credited on the bottom of that page</li>
       <li>Smaller illustrations in place of size comparison are in public domain, from
         <br/><a href="https://www.flickr.com/photos/internetarchivebookimages/">Internet Archive Book Images</a>,
@@ -744,8 +745,8 @@
   <div id="book">
     <div class="left page">
       <div id="index">
-        <h1 onclick="fillBeast('**Bestiary Overview')">Bestiary</h1>
-        <h2>of magic-touched beings in Salem<br/>& Known Worlds Beyond</h2>
+        <a href="#"><h1 onclick="fillBeast('**Bestiary Overview')">Bestiary</h1></a>
+        <h2>of magic-touched beings in Salem<br/>& the Known Worlds</h2>
         <div class="filters">
 
           <select class="filterType select-css" onchange="creatureFilter()">
