--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -555,7 +555,7 @@
     letter-spacing: 2px;
     cursor: pointer;
   }
-  td.beastName {
+  .beastName {
     color: #672307;
     font: 50px / 40px "Hobbiton Brushhand", Cardinal, Georgia, serif;
     margin: 0px;
@@ -567,6 +567,7 @@
     max-height: 100%;
     overflow-y: auto;
     text-shadow: 0px 0px 5px #fffbf6, 0px 0px 3px #fffbf6;
+    flex-shrink: 10;
   }
   #bestiary .beastDesc h1 { 
     background-image: url('https://i.imgur.com/cRe39mL.png'), url('https://i.imgur.com/G5SRvhT.png');
@@ -588,6 +589,7 @@
   }
   #bestiary .bufferspace {
     padding: 0px;
+    flex-shrink: 0;
   }
   ::-webkit-scrollbar {
     width: 2px;
@@ -604,9 +606,13 @@
     position: absolute;
     z-index: 1;
   }
-  #bestiary .beastContainer table {
+  #bestiary .beastContainer .content {
     width: auto;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
   }
   #bestiary .beastContainer td { border: none; }
   #bestiary .beastImg1 {
@@ -799,23 +805,15 @@
     <div class="right page">
       <div id="bestiary">
         <div class="beastContainer">
-          <table>
-            <tr style="height: 0px;">
-              <td class="beastName">
-                Beast Name
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="beastDesc">
-                  A long description of the creature goes here
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td class="bufferSpace"></td>
-            </tr>
-          </table>
+          <div class="content">
+            <div class="beastName">
+              Beast Name
+            </div>
+            <div class="beastDesc">
+              A long description of the creature goes here
+            </div>
+            <div class="bufferSpace"></div>
+          </div>
         </div>
        <div class="info"><div class="summaryInfo"></div><div class="sizeRef"></div></div>
         <div class="credits">Image and text credits</div>
