--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -167,7 +167,7 @@
     if(BeastList[BeastName].ImagePosition && BeastList[BeastName].ImagePosition.length > 6) { 
       isBufferNeeded = false 
     }
-    if (isBufferNeeded) { $('.bufferSpace').css({ "height" : "130px" }); }
+    if (isBufferNeeded) { $('.bufferSpace').css({ "height" : "135px" }); }
 
     /* Sidebar Info */
     var summaryTable = "<h2>Summary</h2><table style='margin-bottom: 10px;'>";
@@ -559,11 +559,12 @@
     color: #672307;
     font: 50px / 40px "Hobbiton Brushhand", Cardinal, Georgia, serif;
     margin: 0px;
+    padding-bottom: 10px;
     text-align: center;
   }
   #bestiary .beastDesc { 
     /*border: 1px solid #8e493c;*/
-    padding: 15px; 
+    padding: 5px 15px; 
     max-height: 100%;
     overflow-y: auto;
     text-shadow: 0px 0px 5px #fffbf6, 0px 0px 3px #fffbf6;
