firefox-scrollbar-fix

--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -522,6 +522,10 @@
     top: 260px;
     overflow:auto;
     border-top: 2px solid #672307;
+
+    /* firefox scrollbar fix */
+    scrollbar-color: #672307 transparent;
+    scrollbar-width: thin;
   }
 
   #index .list .beastSelect {
@@ -569,6 +573,10 @@
     overflow-y: auto;
     text-shadow: 0px 0px 5px #fffbf6, 0px 0px 3px #fffbf6;
     flex-shrink: 10;
+
+    /* firefox scrollbar fix */
+    scrollbar-color: #672307 transparent;
+    scrollbar-width: thin;
   }
   #bestiary .beastDesc h1 { 
     background-image: url('https://i.imgur.com/cRe39mL.png'), url('https://i.imgur.com/G5SRvhT.png');
