--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -734,7 +734,7 @@
   
 </style>
 
-<link href="https://fonts.googleapis.com/css?family=Alice|Almendra|Caudex:400,700|Enriqueta|Kameron|Lustria|PT+Serif|Vollkorn|Zilla+Slab&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Caudex:400,700|Alegreya+SC:400,700&display=swap" rel="stylesheet">
 
 <html>
 <body>
