--- a/starfall/scrollbook.html
+++ b/starfall/scrollbook.html
@@ -236,6 +236,10 @@
 
       console.log(spellList)
 
+      $(".codeDump code").click(function () {
+         $(this).select();
+      });
+
       spellFilter();
       //fillBeast("**Bestiary Overview");
   });
