--- a/starfall/scrollbook.html
+++ b/starfall/scrollbook.html
@@ -19,6 +19,9 @@
   function addSpell(Spell){
     var spellHTML = "<div class='spellSelect'>";
     spellHTML = spellHTML + "<img src='" + spellList[Spell].Icon + "'>"
+    if( spellList[Spell].Level.substring(0,3).toUpperCase() != 'BAS'){
+      spellHTML = spellHTML + "<div class='spellLvl'>" + spellList[Spell].Level.substring(0,3).toUpperCase() + "</div>"
+    }
     spellHTML = spellHTML + "<h2>" + Spell + "</h2>"
     if(spellList[Spell].Synthesis){
       spellHTML = spellHTML + "<div class='synList'><h2>( Item Synthesis )</h2><ul>" + 
@@ -62,6 +65,7 @@
     var selectLevel = $('.filterLevel option:selected').text()
     var selectPrereq = $('.filterPrereq option:selected').text()
     var selectSyn = "Any"
+    var searchTxt = $('.filters input').val()
 
     switch($('.filterSyn option:selected').text()){
       case "Limited Use Items":
@@ -100,6 +104,8 @@
       if( selectSyn.search("Any") == -1 && ( !(spellList[spell].Synthesis) || ( spellList[spell].Synthesis && spellList[spell].Synthesis.search(selectSyn) == -1 )) ){
         continue;
       }
+
+      if(searchTxt.length > 0 && spellList[spell].Description.toUpperCase().search(searchTxt.toUpperCase()) == -1 && spellList[spell].Name.toUpperCase().search(searchTxt.toUpperCase()) == -1) { continue; }
 
       // include all branches which fit the above reqs in the branch dropdown + the one that was selected
       if($(".filterBranch option:contains(" + spellList[spell].Category + ")").length == 0){
@@ -410,6 +416,7 @@
 
   /* Styles for individual spells */
   .spellSelect {
+    position: relative;
     margin-top: 20px;
     margin-right: 30px;
     color: #080808;
@@ -420,6 +427,15 @@
     clear: both;
     margin-top: 8px;
     margin-right: 5px;
+  }
+  .spellSelect .spellLvl {
+    position: absolute;
+    top: 0px; left: 0px;
+    font: bold 8px arial;
+    letter-spacing: 1px;
+    width: 32px;
+    text-align: center;
+    color: #672307;
   }
   .spellSelect > h2 {
     cursor: pointer;
@@ -636,6 +652,7 @@
     color: #34211a;
     font: 12px / 12px Alegreya SC, Georgia, serif;
     text-shadow: -1px -1px 0 rgba(0,0,0,0.1);
+    cursor: pointer;
   }
   .select-css::-ms-expand {
     display: none;
@@ -654,20 +671,32 @@
     font-weight:normal;
   }
 
-  .filters input {
-    box-sizing: border-box; 
+  .filters input { 
     margin-left: 10%; 
-    width: 80%;
-    border: 1px solid #aaa;
+    width: 60%;
+    width: calc(80% - 37px);    
+  }
 
+  .filters .searchButton, .filters input {
+    box-sizing: border-box; 
+    display: inline-block;
+    font-size: 11px;
     line-height: 1.3;
-    padding: .6em 1.4em .5em .8em;
+    padding: .6em .8em .5em .8em;
     background-color: rgba(255,255,255,0.6);
+    border: 1px solid #aaa;
+    margin-top: 1px;
+  }
+
+  .filters .searchButton { 
+    float: right;
+    margin-right: 10%;
+    cursor: pointer;
   }
   
 </style>
 
-<link href="https://fonts.googleapis.com/css?family=Caudex:400,700|Alegreya+SC:400,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Caudex:400,700|Alegreya+SC:400,700|Material+Icons&display=swap" rel="stylesheet">
 
 <html>
 <body>
@@ -690,7 +719,7 @@
         <div class="c-scroll__paper">
           <div class="c-scroll__content">
 
-            <h1>Scroll of Scrolls</h1>
+            <h1>Complete Scroll of Scrolls</h1>
             <div id="index">
               <div class="filters">
 
@@ -718,14 +747,17 @@
                 </select>
 
                 <select class="filterSyn select-css" onchange="spellFilter()">
-                  <option>Any Synergy Potential</option>
+                  <option>Any Synthesis Potential</option>
                   <option>Limited Use Items</option>
                   <option>Reusable Items</option>
                   <option>Companions</option>
                   <option>Permanents</option>
                 </select>
 
-                <input type="text" placeholder="Search descriptions"></input>
+                <div class="inputContainer">
+                  <input type="text" placeholder="Search descriptions"></input>
+                  <div class="searchButton material-icons" onclick="spellFilter()">search</div>
+                </div>
               </div>
 
               <div class="codeDump">
